fixed z-index on header

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -10,7 +10,7 @@ header.about {
 		background-color: white; 
 		box-shadow: inset  0  8px 8px -8px #696868, inset  0 -8px 8px -8px #696868;
 		width: 100%;
-		z-index: 10;
+		z-index: 1;
 		position: absolute;
 		bottom: 2em;
 		left: 50%;
